--- a/applications/ShapeOptimizationApplication/test_examples/05_airfoil_optimization_with_SU2/inv_NACA0012.cfg
+++ b/applications/ShapeOptimizationApplication/test_examples/05_airfoil_optimization_with_SU2/inv_NACA0012.cfg
@@ -20,7 +20,7 @@ PHYSICAL_PROBLEM= EULER
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
-RESTART_SOL= NO
+RESTART_SOL= YES
 
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
@@ -94,13 +94,13 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %                                             TORQUE, FREE_SURFACE, TOTAL_HEATFLUX,
 %                                             MAXIMUM_HEATFLUX, INVERSE_DESIGN_PRESSURE,
 %                                             INVERSE_DESIGN_HEATFLUX)
-OBJECTIVE_FUNCTION= DRAG
+OBJECTIVE_FUNCTION= LIFT
 %
 % Courant-Friedrichs-Lewy condition of the finest grid
 CFL_NUMBER= 4.0
 %
 % Number of total iterations
-EXT_ITER= 500
+EXT_ITER= 5000
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -178,6 +178,8 @@ CFL_REDUCTION_ADJFLOW= 0.5
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT)
 TIME_DISCRE_ADJFLOW= EULER_IMPLICIT
 
+% Remove sharp edges from the sensitivity evaluation (NO, YES)
+SENS_REMOVE_SHARP= YES
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
 % Kind of deformation (NO_DEFORMATION, TRANSLATION, ROTATION, SCALE,
@@ -243,13 +245,13 @@ VISUALIZE_DEFORMATION= NO
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
-CONV_CRITERIA= CAUCHY
+CONV_CRITERIA= RESIDUAL
 %
 % Residual reduction (order of magnitude with respect to the initial value)
 RESIDUAL_REDUCTION= 6
 %
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -8
+RESIDUAL_MINVAL= -7
 %
 % Start Cauchy criteria at iteration number
 STARTCONV_ITER= 10
@@ -316,7 +318,7 @@ WRT_CON_FREQ= 1
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 % Optimization objective function with scaling factor
 % ex= Objective * Scale
-OPT_OBJECTIVE= DRAG * 0.001
+OPT_OBJECTIVE= DRAG
 %
 % Optimization constraint functions with scaling factors, separated by semicolons
 % ex= (Objective = Value ) * Scale, use '>','<','='
